--- a/style/style About.css
+++ b/style/style About.css
@@ -1,3 +1,9 @@
-p{
-    
+*{
+    padding: 0;
+    margin: 0;
+}
+.container{
+    background-color: aqua;
+    width: 500px;
+    height: 100px;
 }
