--- a/style/style index.css
+++ b/style/style index.css
@@ -6,9 +6,12 @@ p{
     text-align: center;
     font-size: 30px;
 }
-.content{
+.container{
     text-align: center;
     font-size: 20px;
+    background-color: palevioletred;
+    width: 100%;
+    height: 20px;
     
 }
 
