--- a/style/style index.css
+++ b/style/style index.css
@@ -11,7 +11,15 @@ p{
     font-size: 20px;
     background-color: palevioletred;
     width: 100%;
-    height: 20px;
+    height: 30px;
+    align-items: center;
+    
+}
+img{
+    width:50%;
+    height: 50%;
+    align-self: center;
+    
     
 }
 
