--- a/style/style index.css
+++ b/style/style index.css
@@ -2,9 +2,14 @@
     padding: 0;
     margin: 0;
 }
+marquee{
+    background-color: aqua;    
+}
 p{
     text-align: center;
     font-size: 30px;
+    margin: 24px;
+    
 }
 .container{
     text-align: center;
@@ -12,13 +17,25 @@ p{
     background-color: palevioletred;
     width: 100%;
     height: 30px;
-    align-items: center;
-    
 }
+/* .card{
+    background-color: aqua;
+    width: 500px;
+    height: 400px;
+    margin: 0px 200px ;
+    border-radius: 10px;
+    padding: 30px 10px;
+    text-align: center;
+} */
 img{
-    width:50%;
-    height: 50%;
-    align-self: center;
+    width:700px;
+    height: 400px;
+    /* margin: 0px 200px ; */
+    border-radius: 10px;
+    margin-left: 350px;
+    
+
+    
     
     
 }
