--- a/style/style index.css
+++ b/style/style index.css
@@ -3,40 +3,50 @@
     margin: 0;
 }
 marquee{
-    background-color: aqua;    
+    background-color: aqua; 
+    height: 30px;   
 }
 p{
     text-align: center;
     font-size: 30px;
     margin: 24px;
-    
-}
-.container{
-    text-align: center;
-    font-size: 20px;
-    background-color: palevioletred;
-    width: 100%;
-    height: 30px;
-}
-/* .card{
-    background-color: aqua;
-    width: 500px;
-    height: 400px;
-    margin: 0px 200px ;
-    border-radius: 10px;
-    padding: 30px 10px;
-    text-align: center;
-} */
-img{
-    width:700px;
-    height: 400px;
-    /* margin: 0px 200px ; */
-    border-radius: 10px;
-    margin-left: 350px;
-    
+    text-decoration: underline;
 
     
     
+}
+.content{
+    text-align: center;
+    font-size: 30px;
+    background-color: palevioletred;
+    width: 100%;
+    height: 60px;
+    align-items: center;
+      
+}
+.Box{
+    background-color: aqua;
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 25px;
+    text-align: center;
+    align-items: center;
+}
+img{
+    width:100%;
+    height: 400px;
+    /* margin: 0px 200px ; */
+    border-radius: 10px;
+}
+.card{
+    background-color:rgb(202, 174, 230) ;
+    width: 100px;
+    height: 50px;
+    margin: 24px;
+    border-radius: 10px;
+    
     
 }
+   
 
