--- a/style/style About.css
+++ b/style/style About.css
@@ -2,8 +2,78 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: bisque;
+}
+       
+.baby{
+    background-color: rgb(190, 224, 213);
+    width: 100%;
+    height: 22px;
+}
+.bb{
+    background-color: rgb(232, 172, 203);
+}
 .container{
-    background-color: aqua;
-    width: 500px;
-    height: 100px;
+    background-color:peachpuff;
+    max-width: 1000px;
+    height: 800px;
+    padding: 24px 12px 24px 12px ;
+    display: flex;
+    justify-content: center;
+    justify-self: center;
+    margin: 200px;
+}
+.skin-care{
+    padding: 0px 0px 200px 0px;
+    width:600px ;
+    margin: 24px 12px;
+    border: salmon;
+    height: 650px;
+    border-radius: 5px;
+
+}
+.img{
+    height: 100%;
+    width: 50%;
+}
+.Tbb{
+    padding: 10px 8px;
+    border-radius:5px ;
+    margin: 2px 10px;
+    border: royalblue;
+}
+.tbb:hover{
+    box-shadow: 0px 1px 6px 0px bisque;
+}
+.mm{
+    padding: 8px 20px ;
+    color: aliceblue;
+    background: wheat;
+    border-radius: 5px;
+
+}
+.ms{
+    padding: 8px 20px;
+    color:aliceblue;
+    background:brown;
+}
+.btn{
+    padding: 8px 20px;
+    color: aliceblue;
+    background: brown;
+}
+.price{
+    padding: 10px 8px;
+    margin-top: 10px 4px;
+}
+.q{
+   margin: 8px 4px; 
+}
+.ns{
+    padding: 5px 5px;
+    border-radius: 5px;
+    margin: 20px 20px;
+    color: antiquewhite;
+    border: snow;
 }
