--- a/style/style index.css
+++ b/style/style index.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 marquee{
-    background-color: aqua; 
+    background-color:rgb(178, 232, 240); 
     height: 30px;   
 }
 p{
@@ -18,14 +18,14 @@ p{
 .content{
     text-align: center;
     font-size: 30px;
-    background-color: palevioletred;
+    background-color: rgb(236, 173, 194);
     width: 100%;
     height: 60px;
     align-items: center;
       
 }
 .Box{
-    background-color: aqua;
+    background-color: rgb(182, 236, 236);
     height: 50px;
     display: flex;
     justify-content: space-evenly;
@@ -42,11 +42,15 @@ img{
 .card{
     background-color:rgb(202, 174, 230) ;
     width: 100px;
-    height: 50px;
+    height: 100px;
     margin: 24px;
     border-radius: 10px;
     
     
+}
+
+   
+
 }
    
 
